# sen

./: .gitignore  Readme.md  dialog.ui  menu.ui  meson.build  sen.gresource.xml  sen.h  sen.ui  senapplication.c  sennotebook.c  sennotebook.h  sentextview.c  sentextview.h
